# nem12-generator

./: .gitignore  .pre-commit-config.yaml  README.md  nem12-generator.code-workspace  pyproject.toml
.github/workflows/: pre-commit.yml  test.yml
examples/: mtrd-example.xml
src/nem12_generator/: __init__.py  generateNEM12.py  generate_mdmt_xml.py  generate_nem12.py
src/nem12_tools/: __main__.py  cli.py
src/nem12_tools/generators/: nem12.py  notifications.py
src/nem12_tools/parsers/: nmid.py
tests/: test_cli.py  test_generators.py  test_parsers.py
